syntax = "proto3";
package com.jyg.proto;
option java_package = "com.jyg.proto";
option java_outer_classname = "p_sm_scene";
//sm服 ping场景服
message p_sm_scene_request_ping {  
	int32 id = 1;  
	string name = 2;  
	string email = 3;  
     
	enum CarType {  
		AUDI = 0; 
		BENZ = 1;  
		LAMBORGHINI = 2;  
		DASAUTO = 3;    
	
   	}  
     
	message Car {  
		string name = 1;  
		CarType type = 2;  
	}  
     
	repeated Car cars = 4;  
}  
//场景服回复sm服
message p_scene_sm_response_pong {  
	
}
//聊天信息
message p_sm_scene_chat {  
	string msg = 1; 
}
message p_scene_sm_chat {  
	string msg = 1; 
}