syntax = "proto3";
option java_multiple_files = true;
package org.jyg.gameserver.core.proto;
option java_package = "org.jyg.gameserver.test.proto";
//option java_outer_classname = "MsgChat";
//sm服 ping场景服
message MsgChat {
	int32 id = 1;
    string content = 2;
}  
